[package]
name = "tetris"
version = "0.1.0"
authors = ["Stepan Kurennykh <stoope@outlook.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2.44"
wee_alloc = { version = "0.4.4", optional = true }
console_error_panic_hook = { version = "0.1.6", optional = true }

[features]
default = ["wee_alloc", "console_error_panic_hook"]
